--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,6 @@
   "headers": [
     { "source": "/(.*)", "headers": [ { "key": "Cache-Control", "value": "no-store" } ] }
   ],
+  "functions": { "nodejs": "22.x" },
   "outputDirectory": "public"
 }
