--- a/vercel.json
+++ b/vercel.json
@@ -5,6 +5,9 @@
   "headers": [
     { "source": "/(.*)", "headers": [ { "key": "Cache-Control", "value": "no-store" } ] }
   ],
-  "functions": { "nodejs": "22.x" },
+  "functions": {
+    "api/**.js": { "runtime": "nodejs22.x" },
+    "api/**.mjs": { "runtime": "nodejs22.x" }
+  },
   "outputDirectory": "public"
 }
