fix: switch admin route to /api/admin (runtime nodejs) and remove admin-protect

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "rewrites": [
-    { "source": "/admin.html", "destination": "/api/admin-protect" }
+    { "source": "/admin.html", "destination": "/api/admin" }
   ],
   "outputDirectory": "public"
 }
